feat:create mechanisms to get  and update a user
