# src/routes/userRoute.ts
@@ -1,7 +1,8 @@
 
 import  express from "express"
 
-import { register} from "../controllers/userController"
+import { register,updateUser,login,getUser} from "../controllers/userController"
+import { AuthMiddleware } from "../middlewares/authMiddleware"
 
 
 
@@ -10,5 +11,8 @@ export const  userRoute =  express.Router()
 
 
 userRoute.post("/",register)
+userRoute.post("/login",login)
+userRoute.put("/",AuthMiddleware,updateUser)
+userRoute.get("/",AuthMiddleware,getUser)
 
 
